# admet-xspec

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CNS_target_list.csv  README.md  README_OLD.md  admet_transfer_data_prep.ipynb  factory.ipynb  filter_by_tanimoto.ipynb  generated_smiles.csv  manage.py  playground.ipynb  plotting.ipynb  predict.py  process.py  pyproject.toml  requirements.txt  requirements.yml  run_all.py  setup.sh  source_from_chembl.py  train.py  train_clf.py
configs/: _global.gin  classifier.gin  classifier_rf.gin  classifier_svm.gin  classify.gin  config.gin  config_RF.gin  config_SVM.gin  config_chemprop.gin  config_rf.gin  config_rf1.gin  config_svc.gin  generate_ecfp.gin  normalize.gin  perform_pca.gin  perform_tsne.gin  perform_umap.gin  predict.gin  regressor.gin  regressor_rf.gin  regressor_svc.gin  regressor_svm.gin  split.gin  train.gin  train_clf.gin  train_manual_nn.gin  train_nn.gin  train_rf.gin
configs/augmented_configs/: AChE_human_IC50_0_random__ecfp__rf__binary_classification.gin  (+111 more)
docs/: README.md  api.rst  conf.py  index.rst  requirements.in  requirements.txt
notebooks/: BBBP_preview.ipynb  chemical_stability.ipynb  dataset_analysis.ipynb  hERG_undersampling.ipynb  result_analysis.ipynb  sol_preview.ipynb
scripts/: clear_prepared_data_cache.py  extract_metrics.py  filter_by_tanimoto.py
src/: ChempropPredictor.py  PredictorBase.py  __init__.py  inference_pipeline.py  mgmt_pipeline.py  processing_pipeline.py  training_pipeline.py  utils.py
src/data/: split.py  (+10 more)
tests/: conftest.py  test_components.py  test_manage.py
(+415 files in other folders)
